--- a/server/.env
+++ b/server/.env
@@ -2,8 +2,9 @@ POSTGRESQL_USER=admin
 POSTGRESQL_PASSWORD=admin
 POSTGRESQL_PORT=5432
 POSTGRESQL_URL=postgres://admin:admin@localhost:5432/todo
+POSTGRESQL_DB_NAME=todo
 BCRYPT_SALT=10
-COMPOSE_PROJECT_NAME=amp_cl5y7h76v137398901gxr2uw4om2
+COMPOSE_PROJECT_NAME=amplication-todo
 JWT_SECRET_KEY=Change_ME!!!
 JWT_EXPIRATION=2d
 SERVER_PORT = 3000
